Allow verification with PIN rather than SMS when restoring from backup.